--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-<div>
-    <h1>Welcome to Casper Kristiansens Page</h1>
-    <h2>This webpage is hosting a playable WebGL build of SkyRacing</h2>
-</div>
+<!DOCTYPE html>
+<html>
+    <body>
+        <div>
+            <h1>Welcome to Casper Kristiansens Page</h1>
+            <h2>This webpage is hosting a playable WebGL build of SkyRacing</h2>
+        </div>
+    </body>
+</html>
